# pwm-tool

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_and_test.yml
src/: main.c  pwm.c  pwm.h
tests/: CMakeLists.txt  pwm-test-common.sh.inc
tests/generic/: channel-invalid.sh  channel-long.sh  channel-short.sh  chip-invalid.sh  chip-long.sh  chip-short.sh  def-no-channel.sh  def-no-chip.sh  def-no-file-dutycycle.sh  def-no-file-enable.sh  def-no-file-period.sh  def-no-files.sh  def-no-sysfs.sh  def.sh  duration-long.sh  duration-short.sh  frequency-long.sh  frequency-short.sh  keep-enabled-long.sh  keep-enabled-short.sh  unknown-arg.sh  version-no-sysfs.sh  version.sh
tests/script/: script-01-spaces.sh  script-01.sh  script-02.sh  script-03.sh
