cmake_minimum_required(VERSION 2.6)

PROJECT(pwm-tool C)
INCLUDE(GNUInstallDirs)
SET(PWM_VERSION 1.0.0)

ADD_DEFINITIONS(-Os -Wall -Werror --std=gnu99 -D_GNU_SOURCE)
ADD_DEFINITIONS(-DPWM_VERSION="${PWM_VERSION}")

INCLUDE_DIRECTORIES(
	src
)

ADD_EXECUTABLE(pwm
	src/main.c
	src/pwm.c
)

TARGET_LINK_LIBRARIES(pwm m)

INSTALL(TARGETS pwm RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
